-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.11
-
None
-
Windows 10 (msvc2017-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure
https://codereview.qt-project.org/#/c/218017/ Update submodules on 'dev' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1517082067
https://testresults.qt.io/logs/qt/qtwebengine/c817effcf42f532d04b9a0352be10ea418e92cb2/WindowsWindows_10x86_64WindowsWindows_10x86_64MSVC2017qtci-windows-10-x86_64-10-e0e8abDebugAndRelease_Release_ForceDebugInfo_OpenGLDynamic/c58cdc5a0701ef9598d46b3587d228a2994ed3f7/build_1517082484/log.txt.gz
[19136/21723] CXX obj/QtWebEngineCore/gl_surface_qt.obj FAILED: obj/QtWebEngineCore/gl_surface_qt.obj ninja -t msvc -e environment.x64 -- "C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.11.25503\bin\HostX64\x64/cl.exe" /nologo /showIncludes @obj/QtWebEngineCore/gl_surface_qt.obj.rsp /c C:/Users/qt/work/qt/qtwebengine/src/core/gl_surface_qt.cpp /Foobj/QtWebEngineCore/gl_surface_qt.obj /Fd"obj/QtWebEngineCore_cc.pdb" cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' c:\users\qt\work\qt\qtwebengine\src\3rdparty\chromium\ui\gl\gl_bindings_autogen_egl.h(97): error C2061: syntax error: identifier 'EGLnsecsANDROID' c:\users\qt\work\qt\qtwebengine\src\3rdparty\chromium\ui\gl\gl_bindings_autogen_egl.h(122): error C2061: syntax error: identifier 'EGLnsecsANDROID' c:\users\qt\work\qt\qtwebengine\src\3rdparty\chromium\ui\gl\gl_bindings_autogen_egl.h(425): error C2061: syntax error: identifier 'EGLnsecsANDROID' c:\users\qt\work\qt\qtwebengine\src\3rdparty\chromium\ui\gl\gl_bindings_autogen_egl.h(449): error C2061: syntax error: identifier 'EGLnsecsANDROID' [19137/21723] CXX obj/QtWebEngineCore/content_client_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19138/21723] CXX obj/QtWebEngineCore/browsing_data_remover_delegate_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19139/21723] CXX obj/QtWebEngineCore/qrc_protocol_handler_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19140/21723] CXX obj/QtWebEngineCore/ssl_host_state_delegate_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19141/21723] CXX obj/QtWebEngineCore/process_main.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19142/21723] CXX obj/QtWebEngineCore/render_view_observer_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19143/21723] CXX obj/QtWebEngineCore/content_renderer_client_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19144/21723] CXX obj/QtWebEngineCore/browser_context_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19145/21723] CXX obj/QtWebEngineCore/devtools_frontend_qt.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19146/21723] CXX obj/QtWebEngineCore/color_chooser_controller.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' [19147/21723] CXX obj/QtWebEngineCore/media_capture_devices_dispatcher.obj cl : Command line warning D9025 : overriding '/W3' with '/W4' cl : Command line warning D9025 : overriding '/O2' with '/O1' cl : Command line warning D9025 : overriding '/O1' with '/O2' cl : Command line warning D9025 : overriding '/W4' with '/W3' ninja: build stopped: subcommand failed. NMAKE : fatal error U1077: 'C:\Users\qt\work\qt\qtwebengine\src\3rdparty\ninja\ninja.exe' : return code '0x1' Stop. NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.11.25503\bin\HostX64\x64\nmake.exe"' : return code '0x2' Stop. NMAKE : fatal error U1077: '(' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop. agent:2018/01/27 20:47:26 build.go:203: Process finished with error: exit status 2 agent:2018/01/27 20:47:26 build.go:155: Error reading from stdout/err: exit status 2 agent:2018/01/27 20:47:26 build.go:399: Executing scheduled instruction 1 of 1 - Upload all core dumps if there are some agent:2018/01/27 20:47:26 build.go:401: agent:2018/01/27 20:47:26 agent.go:181: Build failed agent:2018/01/27 20:47:26 agent.go:79: ERROR building: exit status 2
For Gerrit Dashboard: QTBUG-66038 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
218197,3 | FIXUP: Forward declare newer EGL typedefs | 63-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |