Forward declare newer EGL typedefs

We need these if the system EGL is not new enough because the
EGL autobindings are using them.

Task-number: QTBUG-66038
Change-Id: I373152283ff094886ba2d8c263ae840a5feb3555
Reviewed-by: Michael Brüning <michael.bruning@qt.io>